--- a/ClassLibraryModels/ClassLibraryModels.csproj
+++ b/ClassLibraryModels/ClassLibraryModels.csproj
@@ -43,10 +43,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InputModels\InputCustomer.cs" />
+    <Compile Include="InputModels\InputLoginCustomer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ViewCustomer.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModels\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
