--- a/LotusProject/LotusProject.csproj
+++ b/LotusProject/LotusProject.csproj
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -50,10 +49,10 @@
       <HintPath>..\packages\BouncyCastle.1.8.5\lib\BouncyCastle.Crypto.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Google.Protobuf, Version=3.14.0.0, Culture=neutral, PublicKeyToken=a7d26565bac4d604, processorArchitecture=MSIL">
       <HintPath>..\packages\Google.Protobuf.3.14.0\lib\net45\Google.Protobuf.dll</HintPath>
@@ -71,8 +70,8 @@
     <Reference Include="MySql.Data, Version=8.0.27.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.8.0.27\lib\net48\MySql.Data.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data.EntityFramework, Version=8.0.27.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <HintPath>..\packages\MySql.Data.EntityFramework.8.0.27\lib\net452\MySql.Data.EntityFramework.dll</HintPath>
+    <Reference Include="MySql.Data.EntityFramework, Version=8.0.11.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.EntityFramework.8.0.11\lib\net452\MySql.Data.EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -176,7 +175,9 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Data\LotusContext.cs" />
     <Compile Include="Domain\Entity\Customer.cs" />
+    <Compile Include="Domain\Entity\Employee.cs" />
     <Compile Include="Domain\Entity\Entity.cs" />
+    <Compile Include="Domain\Entity\Products.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -184,9 +185,21 @@
     <Compile Include="Migrations\202110281726241_TableCostumer.designer.cs">
       <DependentUpon>202110281726241_TableCostumer.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202110281818512_SomeAlter.cs" />
-    <Compile Include="Migrations\202110281818512_SomeAlter.designer.cs">
-      <DependentUpon>202110281818512_SomeAlter.cs</DependentUpon>
+    <Compile Include="Migrations\202110281853410_testeSex.cs" />
+    <Compile Include="Migrations\202110281853410_testeSex.designer.cs">
+      <DependentUpon>202110281853410_testeSex.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202110282038070_addEmployee.cs" />
+    <Compile Include="Migrations\202110282038070_addEmployee.designer.cs">
+      <DependentUpon>202110282038070_addEmployee.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202110291552383_addTableProduct.cs" />
+    <Compile Include="Migrations\202110291552383_addTableProduct.Designer.cs">
+      <DependentUpon>202110291552383_addTableProduct.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202110291554520_alterproduct.cs" />
+    <Compile Include="Migrations\202110291554520_alterproduct.Designer.cs">
+      <DependentUpon>202110291554520_alterproduct.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -207,6 +220,7 @@
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="static\css\InitialPage.css" />
     <Content Include="static\css\styleLayout.css" />
+    <Content Include="static\css\styleLayoutAdm.css" />
     <Content Include="static\Images\Alberto Costa.png" />
     <Content Include="static\Images\bg-flowers.png" />
     <Content Include="static\Images\Design_Logo_-_TCC__1_-removebg-preview.png" />
@@ -237,6 +251,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Home.cshtml" />
+    <Content Include="Views\Home\About.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -256,8 +271,17 @@
     <EmbeddedResource Include="Migrations\202110281726241_TableCostumer.resx">
       <DependentUpon>202110281726241_TableCostumer.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202110281818512_SomeAlter.resx">
-      <DependentUpon>202110281818512_SomeAlter.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202110281853410_testeSex.resx">
+      <DependentUpon>202110281853410_testeSex.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110282038070_addEmployee.resx">
+      <DependentUpon>202110282038070_addEmployee.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110291552383_addTableProduct.resx">
+      <DependentUpon>202110291552383_addTableProduct.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110291554520_alterproduct.resx">
+      <DependentUpon>202110291554520_alterproduct.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
@@ -293,10 +317,7 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
-    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
-    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
   </Target>
-  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
