--- a/LotusProject/packages.config
+++ b/LotusProject/packages.config
@@ -10,10 +10,13 @@
   <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net48" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Mvc.pt-br" version="5.2.4" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Razor.pt-br" version="3.2.4" targetFramework="net48" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebPages.pt-br" version="3.2.4" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net48" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net48" />
