--- a/LotusProject/Web.config
+++ b/LotusProject/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
   </configSections>
   <connectionStrings>
     <add name="MySqlConnection" connectionString="server=localhost; Database=dbLotus; user=root; pwd=root; SslMode=Required" providerName="MySql.Data.MySqlClient" />
@@ -75,7 +75,6 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework, Version=8.0.11.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
-      </provider></providers>
+    </providers>
   </entityFramework>
 </configuration>
