--- a/ClassLibraryModels/ClassLibraryModels.csproj
+++ b/ClassLibraryModels/ClassLibraryModels.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="InputModels\InputCustomer.cs" />
     <Compile Include="InputModels\InputLoginCustomer.cs" />
+    <Compile Include="InputModels\InputProduct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Cep.cs" />
     <Compile Include="ViewModels\ViewCustomer.cs" />
