--- a/LotusProject/LotusProject.csproj
+++ b/LotusProject/LotusProject.csproj
@@ -234,13 +234,13 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Home.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Store\Cart.cshtml" />
     <Content Include="Views\Shared\_LayoutStore.cshtml" />
     <Content Include="Views\Store\MainStore.cshtml" />
     <Content Include="Views\Reservation\Reservation.cshtml" />
     <Content Include="Views\Shared\_LayoutEmployee.cshtml" />
     <Content Include="Views\Employee\Dashboard.cshtml" />
     <Content Include="Views\Employee\LogInEmployee.cshtml" />
+    <Content Include="Views\Store\ViewProduct.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
