--- a/ClassLibraryModels/packages.config
+++ b/ClassLibraryModels/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net48" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net48" />
   <package id="WebApiContrib.Formatting.JavaScriptSerializer" version="0.9.4.0" targetFramework="net48" />
 </packages>
