--- a/LotusProject/packages.config
+++ b/LotusProject/packages.config
@@ -22,6 +22,7 @@
   <package id="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" version="1.11.1" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
+  <package id="MySql.Data" version="8.0.27" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
