--- a/LotusProject/Web.config
+++ b/LotusProject/Web.config
@@ -9,6 +9,7 @@
   </configSections>
   <connectionStrings>
     <add name="MySqlConnection" connectionString="server=localhost; Database=dbLotus; user=root; pwd=root; SslMode=Required" providerName="MySql.Data.MySqlClient" />
+    <add name="MySqlSchool" connectionString="server=localhost; Database=dbLotus; user=root; pwd=1234567; SslMode=Required" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
