--- a/LotusProject/packages.config
+++ b/LotusProject/packages.config
@@ -13,12 +13,14 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor.pt-br" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.30506.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages.pt-br" version="3.2.7" targetFramework="net48" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net48" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net48" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net48" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net48" />
   <package id="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" version="1.11.1" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
